REGRESSION (r279119?): [iOS] ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions || m_impl->wasConstructedOnMainThread() == isMainThread() seen with 3 WebKitLegacy media API tests https://bugs.webkit.org/show_bug.cgi?id=227930 <rdar://problem/80545962>

Reviewed by Eric Carlson.

Dispatch to the WebThread if necessary.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):


Canonical link: https://commits.webkit.org/239692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279949 268f45cc-cd09-0410-ab3c-d52691b4dbfc