Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm
@@ -1089,8 +1089,10 @@ void MediaPlayerPrivateAVFoundationObjC::createAVPlayer()
     ASSERT(!m_currentTimeObserver);
     auto weakThis = makeWeakPtr(*this);
     m_currentTimeObserver = [m_avPlayer addPeriodicTimeObserverForInterval:PAL::CMTimeMake(1, 10) queue:dispatch_get_main_queue() usingBlock:[weakThis] (CMTime time) {
-        if (weakThis)
-            weakThis->currentMediaTimeDidChange(PAL::toMediaTime(time));
+        ensureOnMainThread([weakThis, time] {
+            if (weakThis)
+                weakThis->currentMediaTimeDidChange(PAL::toMediaTime(time));
+        });
     }];
 
     setDelayCallbacks(false);
